--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Generic Tool Platform</title>
+    <title>Generic — Redirect</title>
     <meta http-equiv="refresh" content="0; url=demo.html" />
     <link rel="canonical" href="demo.html" />
     <style>
@@ -14,34 +14,4 @@
   <body>
     <p>Redirecting to demo.html… If you are not redirected, <a href="demo.html">click here</a>.</p>
   </body>
-</html><!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Generic — Tool Portfolio</title>
-  <link rel="icon" type="image/svg+xml"
-        href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>⚡</text></svg>" />
-
-  <!-- Stylesheets — no build step required -->
-  <link rel="stylesheet" href="src/styles/reset.css" />
-  <link rel="stylesheet" href="src/styles/themes.css" />
-  <link rel="stylesheet" href="src/styles/typography.css" />
-  <link rel="stylesheet" href="src/styles/layout.css" />
-  <link rel="stylesheet" href="src/styles/components.css" />
-  <link rel="stylesheet" href="src/styles/presentation.css" />
-</head>
-<body class="theme-dark">
-  <!--
-    The shell renders everything dynamically:
-    TopBar, SideNav, and ContentArea are created by src/app/shell.js.
-    No static DOM needed beyond <body>.
-  -->
-
-  <!-- App entry — native ES module, zero dependencies -->
-  <script type="module">
-    import { init } from "./src/app/shell.js";
-    init();
-  </script>
-</body>
 </html>
