--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Generic — Redirect</title>
-    <meta http-equiv="refresh" content="0; url=demo.html" />
-    <link rel="canonical" href="demo.html" />
+    <meta http-equiv="refresh" content="0; url=app.html" />
+    <link rel="canonical" href="app.html" />
     <style>
       body { font-family: system-ui, Segoe UI, Arial, sans-serif; padding: 24px; }
       a { color: #005fb8; }
     </style>
   </head>
   <body>
-    <p>Redirecting to demo.html… If you are not redirected, <a href="demo.html">click here</a>.</p>
+    <p>Redirecting to app.html… If you are not redirected, <a href="app.html">click here</a>.</p>
   </body>
 </html>
